--- a/css/index.scss
+++ b/css/index.scss
@@ -22,6 +22,7 @@ header {
 }
 
 main {
+#grah{
   .card{
     .card-content {
       padding: 12px !important;
@@ -34,8 +35,7 @@ main {
       }
     }
   }
-
-
+}
   .tplp {
     .indicators {
       z-index: 9;
