--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,20 @@
 @charset "UTF-8";
 header {
   /*瀵艰埅*/ }
+  header .navbar-fixed {
+    position: relative;
+    height: 86px;
+    z-index: 997; }
+  header .navbar-fixed nav {
+    position: fixed; }
+  @media only screen and (min-width: 601px) {
+    header nav.nav-extended .nav-wrapper {
+      min-height: 86px; }
+    header nav, header nav .nav-wrapper i, header nav a.button-collapse, header nav a.button-collapse i {
+      height: 86px;
+      line-height: 86px; }
+    header .navbar-fixed {
+      height: 86px; } }
   header nav {
     height: 86px;
     background-color: #30394D; }
@@ -13,6 +27,12 @@ header {
         font-size: 1.5rem;
         line-height: 86px; }
 
+main .row .col {
+  float: left;
+  box-sizing: border-box;
+  /* padding: 0 0.75rem; */
+  /* min-height: 1px; */
+  width: 0; }
 main #grah .card .card-content {
   padding: 12px !important;
   height: 160px; }
@@ -21,18 +41,27 @@ main #grah .card .card-content {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: pre-line; }
-main .tplp .indicators {
+main .slider .indicators {
   z-index: 9;
   text-align: center;
-  margin-bottom: 50px; }
+  margin-bottom: 30px; }
 main .slider .slides {
   background-color: #30394D !important; }
   main .slider .slides li img {
     margin-top: 30px;
     max-width: 337px;
     height: 250px; }
+  main .slider .slides li .caption {
+    top: 5%;
+    left: 10%;
+    width: 80%; }
 main .home-color {
   background-color: #30394D !important; }
+main .card-panel {
+  padding-top: 10px; }
+  main .card-panel span h4 {
+    color: #30394D !important;
+    font-weight: 900; }
 
 .page-footer {
   background-color: #30394D !important; }
